fix(levequests): fixed a layout issue with levequests page

--- a/apps/client/src/app/pages/levequests/levequests/levequests.component.less
+++ b/apps/client/src/app/pages/levequests/levequests/levequests.component.less
@@ -141,4 +141,8 @@
       }
     }
   }
+
+  .ant-spin-container {
+    flex-direction: column;
+  }
 }
